updated ports, user field and creation of superuser on initialization of databse

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,6 @@ FRONT_END_URL=http://localhost:3000
 KEY = "sample"
 EMAIL = "sample@sample.com"
 PASSWORD = "sa mp le "
+SUPERUSER_USERNAME = "admin"
+SUPERUSER_PASSWORD = "admin"
+SUPERUSER_EMAIL = "superuser@sample.com"
