--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
+    "test": "jest",
     "dev": "nodemon src/index.js"
   },
   "author": "",
@@ -21,7 +22,15 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.7.0",
+    "node": "^18.20.4",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
